--- a/sweep.yaml
+++ b/sweep.yaml
@@ -9,17 +9,12 @@ parameters:
     values: [10, 15, 20]
   lr:
     distribution: log_uniform_values
-    min: 10e-6
-    max: 10e-5
+    min: 10e-5
+    max: 0.1
   schedule_type:
     values:
       - 'linear'
       - 'cosine'
-  model_version:
-    values:
-      - 'gpt2-medium'
-      - 'gpt2-large'
-      - 'gpt2-xl'
 early_terminate:
   type: hyperband
   min_iter: 2
