--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 datasets~=2.9.0
 transformers~=4.26.1
 sacrebleu
-evaluate
+evaluate~=0.4.0
 rouge_score
-wandb
-numpy~=1.21.6
+wandb~=0.13.10
+numpy~=1.24.2
 tqdm~=4.64.1
 torch~=1.13.1
+pyyaml~=6.0
+accelerate
